# django-simple-webpack

./: .coveragerc  .editorconfig  .travis.yml  LICENSE  Makefile  README.rst  manage.py  package.json  pylintrc  setup.cfg  setup.py  tox.ini
django_simple_webpack/: settings.py  urls.py  wsgi.py
docs/: Makefile  conf.py  index.rst  make.bat
requirements/: ci.txt  dev.txt  test.txt
simple_webpack/: __init__.py  apps.py  exceptions.py  urls.py  utils.py
simple_webpack/Templates/: index.html
simple_webpack/templatetags/: simple_webpack_tags.py
tests/: test_utils.py
